# mstd

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile  README.md  install_test.bat  mstd.sln  pack_mstd.bat
cmake/: clang_tidy.cmake  coverage_report.cmake  doxygen.cmake  get_cpm.cmake  mstdConfig.cmake.in  third_party.cmake
coverage_report/: index.html
docs/html/: annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_043c1befa9b7657ae5c68ef0c8f9d49c.html  dir_35a3c6e849f9c214c94f58f87ebfcd68.html  dir_3d87f6278db87ebb8153939b6b2e6ce7.html  dir_425ab882121408d17231a2f7d45eca12.html  dir_53560092b8729c39d45d53b24000eedd.html  dir_757a4a0afa6b1521c4edeb0e93aeaf1d.html  dir_7791085837ffd1d093653f773032460f.html  dir_7844007e9a3712911fdfc81963082bf3.html  dir_7f22783af75164a7660f01333ccafa34.html  dir_a68ab15140822fbe3b01fc899b96c16b.html  dir_ab66db841a476803651dab994bb1a226.html  dir_b34341fd5ca40c4f2c32ce5ee1d398a7.html  dir_d314ee2304ebf4cc6b99df821fc5f56f.html  dir_de6b596f193cca30c557a28372e97c28.html  dir_e288e9261013db73dce56d1fa6c75d0f.html  dir_e37bafea4a8ca09bb682909059dc6130.html  dir_e8c207b074c52c3ce1b0e6cace4b1c67.html  dir_f8e137931ddb3bfe430d3d190746181e.html  doxygen_crawl.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_func.html  functions_func.js  functions_func_a.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  (+139 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  concepts_0.js  concepts_1.js  concepts_2.js  concepts_3.js  concepts_4.js  concepts_5.js  concepts_6.js  concepts_7.js  (+58 more)
include/: arithmetic.hpp  arithmetic_libs.hpp  arithmetic_types.hpp  as_function.hpp  containers.hpp  containers_libs.hpp  containers_types.hpp  function_traits.hpp  functions.hpp  functions_libs.hpp  is_callable.hpp  is_same_function.hpp  isstrnum.hpp  macros.hpp  mstd.hpp  mstd_config.hpp  mstd_libs.hpp  ordered_map.hpp  ordered_set.hpp  overflow_operations.hpp  string.hpp  string_libs.hpp  string_types.hpp  strtonum.hpp  terminal.hpp  terminal_libs.hpp
include/arithmetic/mstd/: arithmetic.hpp  arithmetic_libs.hpp  arithmetic_types.hpp  bit_operations.hpp  mat.hpp  math_functions.hpp  overflow_operations.hpp  quat.hpp  vec.hpp
include/containers/mstd/: bimap.hpp  containers.hpp  containers_libs.hpp  containers_types.hpp  ordered_map.hpp  ordered_set.hpp
include/events/mstd/: event_handler.hpp  events.hpp  events_libs.hpp
include/functions/mstd/: as_function.hpp  function_traits.hpp  functions.hpp  functions_libs.hpp  is_callable.hpp  is_same_function.hpp
include/main/mstd/: config.hpp  libs.hpp  macros.hpp  mstd.hpp  mstd_config.hpp  mstd_libs.hpp
include/mstd/: arithmetic.hpp  arithmetic_libs.hpp  arithmetic_types.hpp  mat.hpp  math_functions.hpp  mstd.hpp  quat.hpp  vec.hpp
include/string/mstd/: isstrnum.hpp  strconcat.hpp  string.hpp  string_libs.hpp  string_types.hpp  strtonum.hpp
include/terminal/mstd/: terminal.hpp  (+1 more)
mstd/: CMakeLists.txt
mstd/include/arithmetic/mstd/: arithmetic.hpp  arithmetic_libs.hpp  arithmetic_types.hpp  arithmetic_utils.hpp  bit_operations.hpp  mat.hpp  math_functions.hpp  overflow_operations.hpp  quat.hpp  vec.hpp
mstd/include/containers/mstd/: bimap.hpp  containers.hpp  containers_libs.hpp  containers_types.hpp  containers_utils.hpp  magic_container.hpp  ordered_map.hpp  ordered_set.hpp  stable_vector.hpp
mstd/include/events/mstd/: event_handler.hpp  events.hpp  events_libs.hpp  events_types.hpp  events_utils.hpp
mstd/include/functions/mstd/: as_std_function.hpp  function.hpp  function_traits.hpp  function_types.hpp  function_view.hpp  functions.hpp  functions_libs.hpp  functions_types.hpp  functions_utils.hpp  is_callable.hpp  is_same_function.hpp
mstd/include/main/mstd/: config.hpp  libs.hpp  macros.hpp  mstd.hpp  pch.hpp  types.hpp  utils.hpp
mstd/include/management/mstd/: assert.hpp  assert_base.hpp  flags.hpp  hash.hpp  id_manager.hpp  management.hpp  management_libs.hpp  management_types.hpp  management_utils.hpp
mstd/include/string/mstd/: isstrnum.hpp  strconcat.hpp  string.hpp  string_libs.hpp  string_types.hpp  string_utils.hpp  strmods.hpp  strtonum.hpp
mstd/include/terminal/mstd/: terminal.hpp  terminal_libs.hpp  terminal_management.hpp  terminal_types.hpp  terminal_utils.hpp
mstd/include/utils/mstd/: assert.hpp  hash.hpp  id_manager.hpp  types.hpp  utils_libs.hpp
src/: mstd.vcxproj  mstd.vcxproj.filters  pch.cpp  pch.hpp
tests/: CMakeLists.txt  arithmetic_tests.cpp  containers_tests.cpp  events_tests.cpp  functions_tests.cpp  main_test.cpp  pch.hpp  strings_tests.cpp  terminal_tests.cpp  utils_tests.cpp
tests/arithmetic/: bit_operations_tests.cpp  mat_tests.cpp  math_functions_tests.cpp  overflow_operations_tests.cpp  quat_tests.cpp  vec_tests.cpp
tests/containers/: bimap_tests.cpp  magic_container.cpp  ordered_map_tests.cpp  ordered_set_tests.cpp  stable_vector_tests.cpp
tests/events/: event_handler_tests.cpp
tests/functions/: as_function_tests.cpp  as_std_function_tests.cpp  function_traits_tests.cpp  function_types_tests.cpp  function_view_tests.cpp  is_callable_tests.cpp  is_same_function_tests.cpp
tests/main/: macros_tests.cpp
tests/management/: assert_tests.cpp  flags_tests.cpp  hash_tests.cpp  id_manager_tests.cpp  types_tests.cpp
tests/strings/: isstrnum_tests.cpp  strconcat_tests.cpp  string_types_tests.cpp  string_utils_tests.cpp  strmods_tests.cpp  strtonum_tests.cpp
tests/terminal/: terminal_tests.cpp
tests/utils/: assert_tests.cpp  types_tests.cpp
tools/pack_mstd/: pack_mstd.py
(+841 files in other folders)
