# header files
set(PROJECT_HEADERS ${PROJECT_NAME}_HEADERS)
set(BUILD_HEADERS_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)

file(GLOB HEADERS_PATHS LIST_DIRECTORIES true LIST_FILES false ${BUILD_HEADERS_PATH}/*)

set(${PROJECT_HEADERS} "")
foreach(DIR ${HEADERS_PATHS})
    file(GLOB_RECURSE CURRENT_HEADERS "${DIR}/${PROJECT_NAME}/*.hpp")
    list(APPEND ${PROJECT_HEADERS} ${CURRENT_HEADERS})
endforeach()

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${${PROJECT_HEADERS}})

# make library
add_library(${PROJECT_NAME} INTERFACE ${${PROJECT_HEADERS}})

enable_clang_tidy(${PROJECT_NAME})

target_compile_features(${PROJECT_NAME} INTERFACE $<IF:$<BOOL:${MSTD_ENABLE_CXX20}>, cxx_std_20, cxx_std_17>)

# set library alias
set(PROJECT_NAMESPACE ${PROJECT_NAME}::)
set(PROJECT_ALIAS ${PROJECT_NAMESPACE}${PROJECT_NAME})
add_library(${PROJECT_ALIAS} ALIAS ${PROJECT_NAME})

target_link_libraries(${PROJECT_NAME} INTERFACE fmt::fmt)

# set headers folder
set(INSTALL_HEADERS_PATH include)
target_include_directories(${PROJECT_NAME} INTERFACE ${HEADERS_PATHS}
#	$<BUILD_INTERFACE:${BUILD_HEADERS_PATH}>
#	$<INSTALL_INTERFACE:${INSTALL_HEADERS_PATH}>
)

target_compile_definitions(${PROJECT_NAME} INTERFACE	$<IF:$<BOOL:${MSTD_ENABLE_CXX20}>,              MSTD_ENABLE_CXX20, >
														$<IF:$<BOOL:${MSTD_DISABLE_ASSERT_ON_RELEASE}>, MSTD_DISABLE_ASSERT_ON_RELEASE, >
                                                        $<IF:$<BOOL:${MSTD_ENABLE_FOR_EACH_MACROS}>,    MSTD_ENABLE_FOR_EACH_MACROS, >
                                                        $<IF:$<BOOL:${MSTD_ENABLE_ENUMS_MACROS}>,       MSTD_ENABLE_ENUMS_MACROS, >
                                                        $<IF:$<BOOL:${MSTD_ENABLE_CLONE_FUNC_MACROS}>,  MSTD_ENABLE_CLONE_FUNC_MACROS, >
                                                        $<IF:$<BOOL:${MSTD_ENABLE_EXTRA_MACROS}>,       MSTD_ENABLE_EXTRA_MACROS, >
)

# TODO: install

# library installation
#set(PROJECT_CONFIG_FILE ${PROJECT_NAME}-config)
#install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_CONFIG_FILE}
#	LIBRARY DESTINATION lib
#	ARCHIVE DESTINATION lib
#	RUNTIME DESTINATION bin
#	INCLUDES DESTINATION ${INSTALL_HEADERS_PATH}
#)

#install(DIRECTORY ${BUILD_HEADERS_PATH}/ DESTINATION ${INSTALL_HEADERS_PATH})
#install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets)

# export cmake config
#install(EXPORT ${PROJECT_CONFIG_FILE} DESTINATION cmake/${PROJECT_NAME} NAMESPACE ${PROJECT_NAMESPACE})
#export(EXPORT ${PROJECT_CONFIG_FILE} NAMESPACE ${PROJECT_NAMESPACE})

# configuration version file
#set(PROJECT_CONFIG_VERSION_FILE ${PROJECT_CONFIG_FILE}-version.cmake)
#include(CMakePackageConfigHelpers)
#write_basic_package_version_file(
#	"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_CONFIG_VERSION_FILE}"
#	VERSION ${PROJECT_VERSION}
#	COMPATIBILITY AnyNewerVersion
#)

#install(FILES
#	"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_CONFIG_VERSION_FILE}"
#	DESTINATION cmake/${PROJECT_NAME}
#)